--- a/ide1.css
+++ b/ide1.css
@@ -71,3 +71,9 @@ font-size: larger;
     justify-content: center;
 }
 
+#xcode {
+margin-top: 2cm;
+margin-left: 7cm;
+margin-right: 7cm;
+margin-bottom: 2cm;
+}
